WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252316
REGRESSION(
260301@main
): Broke debug build
https://bugs.webkit.org/show_bug.cgi?id=252316
Summary
REGRESSION(260301@main): Broke debug build
Philippe Normand
Reported
2023-02-15 08:41:33 PST
/app/webkit/Source/WebCore/platform/graphics/cairo/CairoUtilities.cpp:61:16: error: use of undeclared identifier 'RunLoop' do { if (!(RunLoop::isMain())) { WTFReportAssertionFailure("/app/webkit/Source/WebCore/platform/graphics/cairo/CairoUtilities.cpp", 61, __PRETTY_FUNCTION__, "RunLoop::isMain()"); do { WTF::isIntegralOrPointerType(); compilerFenceForCrash(); WTFCrashWithInfo(61, "/app/webkit/Source/WebCore/platform/graphics/cairo/CairoUtilities.cpp", __PRETTY_FUNCTION__, 397 ); } while (false); } } while (0); ^ 1 error generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-02-15 08:45:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10148
EWS
Comment 2
2023-02-15 08:49:17 PST
Committed
260312@main
(8115ef7fc60f): <
https://commits.webkit.org/260312@main
> Reviewed commits have been landed. Closing PR #10148 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug